arrage file system

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.0.2)
-project(oakcam_ffc_4p_ros)
+project(oak_ffc_4p_ros)
 
 set(CMAKE_BUILD_TYPE "Release")
 add_compile_options(-std=c++17)
@@ -8,6 +8,7 @@ set(CMAKE_CXX_FLAGS_RELEASE "-g -O3 -Wno-write-strings -Wno-format-overflow ")
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
+
 find_package(catkin REQUIRED COMPONENTS
   cv_bridge
   image_transport
@@ -18,6 +19,14 @@ find_package(catkin REQUIRED COMPONENTS
   depthai_bridge
   # depthai
 )
+
+catkin_package(
+#  INCLUDE_DIRS include
+#  LIBRARIES myu_pkg
+#  CATKIN_DEPENDS roscpp rosmsg rospy
+#  DEPENDS system_lib
+)
+
 
 find_package(spdlog REQUIRED)
 find_package(fmt REQUIRED)
@@ -61,27 +70,27 @@ target_include_directories(${PROJECT_NAME}_test PUBLIC
   /root/3rd_party/XLink/build/install/include
 )
 
-# add_library(oakcam_ffc_4p_ros STATIC
-#   src/ffc_4p_driver.cpp
-# )
+add_library(${PROJECT_NAME}_lib STATIC
+  oak_ffc_4p.cpp
+)
 
-# # add_dependencies(oakcam_ffc_4p_ros ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+target_link_libraries(${PROJECT_NAME}_lib
+  ${catkin_LIBRARIES}
+  ${OpenCV_LIBRARIES}
+  depthai::opencv
+  depthai-core
+  XLink
+  spdlog
+  fmt::fmt
+  pthread
+)
 
-# ## Declare a C++ executable
-# ## With catkin_make all packages are built within a single CMake context
-# ## The recommended prefix ensures that target names across packages don't collide
-# add_executable(${PROJECT_NAME}_node src/ffc_4p_node.cpp)
-# add_dependencies(${PROJECT_NAME}_node oakcam_ffc_4p_ros  ${catkin_EXPORTED_TARGETS})
+add_executable(${PROJECT_NAME}_node oak_ffc_4p_node.cpp)
+# add_dependencies(${PROJECT_NAME}_node   ${PROJECT_NAME}_lib  ${catkin_EXPORTED_TARGETS})
 
-# target_link_libraries(oakcam_ffc_4p_ros
-#   ${catkin_LIBRARIES}
-#   ${OpenCV_LIBRARIES}
-#   depthai::opencv
-# )
-
-# target_link_libraries(${PROJECT_NAME}_node
-#   oakcam_ffc_4p_ros
-#   ${catkin_LIBRARIES}
-#   ${OpenCV_LIBRARIES}
-#   depthai::opencv
-# )
+target_link_libraries(${PROJECT_NAME}_node
+  ${PROJECT_NAME}_lib
+  ${catkin_LIBRARIES}
+  ${OpenCV_LIBRARIES}
+  depthai::opencv
+)
