--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -10,12 +10,12 @@ WORKDIR ${DEPTH_CORE}
 
 RUN apt-get update &&\
     apt-get install -y \
-    vim \ 
-    wget \
+    vim wget pip clang-format\
     ros-noetic-depthai-bridge \
     ros-noetic-depthai-ros-msgs \
     ros-noetic-image-transport \
-    ros-noetic-cv-bridge
+    ros-noetic-cv-bridge \
+    python3-catkin-tools
 
 
 # install depth-ai core   
@@ -56,6 +56,10 @@ RUN wget https://github.com/fmtlib/fmt/archive/refs/tags/7.1.3.tar.gz &&\
     make -j$(nproc) &&\
     make install
 
+# ROS ENV setup
+RUN echo "source /opt/ros/${ROS_VERSION}/setup.bash" >> ~/.bashrc &&\
+    source ~/.bashrc
+    
 WORKDIR ${OAK_WS}
 
 # RUN mkdir -p ${OAK_WS}/src &&\
@@ -65,6 +69,3 @@ WORKDIR ${OAK_WS}
 # RUN source "/opt/ros/noetic/setup.bash" &&\
 #     cd ${OAK_WS} &&\
 #     catkin_make
-
-# RUN source "/root/oak_ffc_ws/devel/setup.bash" &&\
-#     echo "source /root/oak_ffc_ws/devel/setup.bash" >> /root/.bashrc
