update for multi-platform compile

--- a/docker/Makefile
+++ b/docker/Makefile
@@ -1,2 +1,5 @@
 oak_ffc_4p:
-	@docker build -t quad_cam:latest -f Dockerfile ..
+	@docker build -t hkustswarm/ros_oak_quad_cam:latest -f Dockerfile ..
+
+ros_oak_quad_cam_dockerhub:
+	@docker buildx build --platform linux/amd64,linux/arm64 -t hkustswarm/ros_oak_quad_cam:latest -f Dockerfile .. --push
